--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_TOKEN=7937391885:AAGXnD640_IlrTFzL7Vw1CbW9d_nSHd4oxY
 YOUR_CHAT_ID=1145510380
+WEBHOOK_HOST=https://sunshine-bot-9ruz.onrender.com
