--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 API_TOKEN=7937391885:AAGXnD640_IlrTFzL7Vw1CbW9d_nSHd4oxY
 YOUR_CHAT_ID=1145510380
 WEBHOOK_URL=https://sunshine-bot-9ruz.onrender.com
+OPENAI_API_KEY=sk-...
+TOGETHER_API_KEY=...
