--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-aiogram==3.4.1
-fastapi
-uvicorn
-apscheduler
-requests
-openai
+requests==2.31.0
+openai==1.18.0
+apscheduler==3.10.4
+python-dotenv==1.0.1
